--- a/MyFirstWebApp/pom.xml
+++ b/MyFirstWebApp/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>MyFirstWebApp</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>MyFirstWebApp Maven Webapp!</name>
+  <name>MyFirstWebApp Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
